Fix select padding on mobile

--- a/src/filterable-gallery-block/style.scss
+++ b/src/filterable-gallery-block/style.scss
@@ -31,8 +31,12 @@
 
 	// Term filter container.
 	.filter-bar {
-		padding: 0 1.5rem 2rem;
+		padding: 0 0 2rem;
 		width: 100%;
+
+		@media (min-width: 680px) {
+			padding: 0 1.5rem 2rem;
+		}
 
 		@media (min-width: 1040px) {
 			width: 220px;
@@ -112,7 +116,10 @@
 		max-width: 100%;
 
 		@media (min-width: 680px) {
-			grid-template-columns: repeat(auto-fit, minmax(220px, 1fr)); // Images are 200px.
+			grid-template-columns: repeat(
+				auto-fit,
+				minmax(220px, 1fr)
+			); // Images are 200px.
 			padding: 0 1.5rem;
 		}
 	}
@@ -166,7 +173,6 @@
 			}
 
 			@media (min-width: 400px) {
-
 				strong {
 					width: 80px;
 				}
@@ -186,7 +192,6 @@
 		}
 
 		@keyframes scaleIn {
-
 			0% {
 				transform: scale(0);
 			}
